// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Table Basic Table 1`] = `
<div
  className="sc-gicCDI gfOULo"
  data-element="tableWrapper"
>
  <table
    className="sc-ezWOiH fmCaML"
    data-element="table"
  >
    <thead
      className="sc-cCsOjp ffUHXz"
    >
      
      
      <tr>
        <td
          className="sc-ikZpkk sc-jIZahH kEHywv hohZkz"
        >
          <div
            className="sc-bZkfAO sc-kLLXSd ftgqdL bmhxgA"
          >
            Assets
          </div>
        </td>
        <td
          className="sc-ikZpkk sc-jIZahH jKbMnz hohZkz"
        >
          <div
            className="sc-bZkfAO sc-kLLXSd ftgqdL bmhxgA"
          >
            Total value deposited
          </div>
        </td>
        <td
          className="sc-ikZpkk sc-jIZahH jKbMnz hohZkz"
        >
          <div
            className="sc-bZkfAO sc-kLLXSd ftgqdL bmhxgA"
          >
            Total borrowed
          </div>
        </td>
        <td
          className="sc-ikZpkk sc-jIZahH jKbMnz hohZkz"
        >
          <div
            className="sc-bZkfAO sc-kLLXSd ftgqdL bmhxgA"
          >
            Deposit APY
          </div>
        </td>
        <td
          className="sc-ikZpkk sc-jIZahH jorjXY hohZkz"
        >
          <div
            className="sc-bZkfAO sc-kLLXSd ftgqdL bmhxgA"
          >
            Borrow APY
          </div>
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className="sc-ikZpkk kEHywv"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            ETH
          </div>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-ikZpkk jorjXY"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-ikZpkk kEHywv"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            DAI
          </div>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-ikZpkk jorjXY"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-ikZpkk kEHywv"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            POLKA
          </div>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-ikZpkk jorjXY"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-ikZpkk kEHywv"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            BTC
          </div>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-ikZpkk jorjXY"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table Empty Data Table 1`] = `
<div
  className="sc-gicCDI coYVkD"
  data-element="tableWrapper"
>
  <table
    className="sc-ezWOiH fmCaML"
    data-element="table"
  >
    <thead
      className="sc-cCsOjp ffUHXz"
    >
      
      
    </thead>
    <tbody>
      <tr>
        <td
          className="sc-ikZpkk iNxhSO"
          colSpan={5}
        >
          <p
            className="sc-fnykZs hZjXuC c-text--body-5"
          >
            There is no data loaded.
          </p>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table Expandable table 1`] = `
<div
  className="sc-gicCDI gfOULo"
  data-element="tableWrapper"
>
  <table
    className="sc-ezWOiH fmCaML"
    data-element="table"
  >
    <thead
      className="sc-cCsOjp ffUHXz"
    >
      
      
      <tr>
        <td
          className="sc-ikZpkk sc-jIZahH kEHywv hohZkz"
        >
          <div
            className="sc-bZkfAO sc-kLLXSd ftgqdL bmhxgA"
          >
            Assets
          </div>
        </td>
        <td
          className="sc-ikZpkk sc-jIZahH jKbMnz hohZkz"
        >
          <div
            className="sc-bZkfAO sc-kLLXSd ftgqdL bmhxgA"
          >
            Total value deposited
          </div>
        </td>
        <td
          className="sc-ikZpkk sc-jIZahH jKbMnz hohZkz"
        >
          <div
            className="sc-bZkfAO sc-kLLXSd ftgqdL bmhxgA"
          >
            Total borrowed
          </div>
        </td>
        <td
          className="sc-ikZpkk sc-jIZahH jKbMnz hohZkz"
        >
          <div
            className="sc-bZkfAO sc-kLLXSd ftgqdL bmhxgA"
          >
            Deposit APY
          </div>
        </td>
        <td
          className="sc-ikZpkk sc-jIZahH jorjXY hohZkz"
        >
          <div
            className="sc-bZkfAO sc-kLLXSd ftgqdL bmhxgA"
          >
            Borrow APY
          </div>
        </td>
        <td
          className="sc-ikZpkk sc-jIZahH gxqPAS hohZkz"
          width={100}
        >
          <div
            className="sc-bZkfAO sc-kLLXSd ftgqdL bmhxgA"
          >
            Action
          </div>
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className="sc-ikZpkk kEHywv"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            ETH
          </div>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-ikZpkk jorjXY"
        >
          <span>
            7.5%
          </span>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <button
            appearance="primary"
            className="sc-dkzDqf sc-hKMtZM dsAMhH jyzXNF"
            data-element="button"
            onClick={[Function]}
            size="small"
            variant="thin"
          >
            Expand
          </button>
        </td>
      </tr>
      <tr>
        <td
          className="sc-ikZpkk kEHywv"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            DAI
          </div>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-ikZpkk jorjXY"
        >
          <span>
            7.5%
          </span>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <button
            appearance="primary"
            className="sc-dkzDqf sc-hKMtZM dsAMhH jyzXNF"
            data-element="button"
            onClick={[Function]}
            size="small"
            variant="thin"
          >
            Expand
          </button>
        </td>
      </tr>
      <tr>
        <td
          className="sc-ikZpkk kEHywv"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            POLKA
          </div>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-ikZpkk jorjXY"
        >
          <span>
            7.5%
          </span>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <button
            appearance="primary"
            className="sc-dkzDqf sc-hKMtZM dsAMhH jyzXNF"
            data-element="button"
            onClick={[Function]}
            size="small"
            variant="thin"
          >
            Expand
          </button>
        </td>
      </tr>
      <tr>
        <td
          className="sc-ikZpkk kEHywv"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            BTC
          </div>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-ikZpkk jorjXY"
        >
          <span>
            7.5%
          </span>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <button
            appearance="primary"
            className="sc-dkzDqf sc-hKMtZM dsAMhH jyzXNF"
            data-element="button"
            onClick={[Function]}
            size="small"
            variant="thin"
          >
            Expand
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table Title As Component 1`] = `
<div
  className="sc-gicCDI gfOULo"
  data-element="tableWrapper"
>
  <table
    className="sc-ezWOiH fmCaML"
    data-element="table"
  >
    <thead
      className="sc-cCsOjp ffUHXz"
    >
      <tr>
        <td
          className="sc-jdAMXn cgapwY"
          colSpan={5}
        >
          <div>
            Your deposit
          </div>
        </td>
      </tr>
      <tr>
        <td
          className="sc-ikZpkk sc-jIZahH kEHywv iVsiNu"
        >
          <div
            className="sc-bZkfAO sc-kLLXSd ftgqdL bmhxgA"
          >
            Assets
          </div>
        </td>
        <td
          className="sc-ikZpkk sc-jIZahH jKbMnz iVsiNu"
        >
          <div
            className="sc-bZkfAO sc-kLLXSd ftgqdL bmhxgA"
          >
            Total value deposited
          </div>
        </td>
        <td
          className="sc-ikZpkk sc-jIZahH jKbMnz iVsiNu"
        >
          <div
            className="sc-bZkfAO sc-kLLXSd ftgqdL bmhxgA"
          >
            Total borrowed
          </div>
        </td>
        <td
          className="sc-ikZpkk sc-jIZahH jKbMnz iVsiNu"
        >
          <div
            className="sc-bZkfAO sc-kLLXSd ftgqdL bmhxgA"
          >
            Deposit APY
          </div>
        </td>
        <td
          className="sc-ikZpkk sc-jIZahH jorjXY iVsiNu"
        >
          <div
            className="sc-bZkfAO sc-kLLXSd ftgqdL bmhxgA"
          >
            Borrow APY
          </div>
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className="sc-ikZpkk kEHywv"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            ETH
          </div>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-ikZpkk jorjXY"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-ikZpkk kEHywv"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            DAI
          </div>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-ikZpkk jorjXY"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-ikZpkk kEHywv"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            POLKA
          </div>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-ikZpkk jorjXY"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-ikZpkk kEHywv"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            BTC
          </div>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-ikZpkk jorjXY"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table Title As Plain Text 1`] = `
<div
  className="sc-gicCDI gfOULo"
  data-element="tableWrapper"
>
  <table
    className="sc-ezWOiH fmCaML"
    data-element="table"
  >
    <thead
      className="sc-cCsOjp ffUHXz"
    >
      <tr>
        <td
          className="sc-ciZhAO jsYIPu"
          colSpan={5}
        >
          Assets to deposit
        </td>
      </tr>
      <tr>
        <td
          className="sc-ikZpkk sc-jIZahH kEHywv iVsiNu"
        >
          <div
            className="sc-bZkfAO sc-kLLXSd ftgqdL bmhxgA"
          >
            Assets
          </div>
        </td>
        <td
          className="sc-ikZpkk sc-jIZahH jKbMnz iVsiNu"
        >
          <div
            className="sc-bZkfAO sc-kLLXSd ftgqdL bmhxgA"
          >
            Total value deposited
          </div>
        </td>
        <td
          className="sc-ikZpkk sc-jIZahH jKbMnz iVsiNu"
        >
          <div
            className="sc-bZkfAO sc-kLLXSd ftgqdL bmhxgA"
          >
            Total borrowed
          </div>
        </td>
        <td
          className="sc-ikZpkk sc-jIZahH jKbMnz iVsiNu"
        >
          <div
            className="sc-bZkfAO sc-kLLXSd ftgqdL bmhxgA"
          >
            Deposit APY
          </div>
        </td>
        <td
          className="sc-ikZpkk sc-jIZahH jorjXY iVsiNu"
        >
          <div
            className="sc-bZkfAO sc-kLLXSd ftgqdL bmhxgA"
          >
            Borrow APY
          </div>
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className="sc-ikZpkk kEHywv"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            ETH
          </div>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-ikZpkk jorjXY"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-ikZpkk kEHywv"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            DAI
          </div>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-ikZpkk jorjXY"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-ikZpkk kEHywv"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            POLKA
          </div>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-ikZpkk jorjXY"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-ikZpkk kEHywv"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            BTC
          </div>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-ikZpkk jorjXY"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table With Footer 1`] = `
<div
  className="sc-gicCDI gfOULo"
  data-element="tableWrapper"
>
  <table
    className="sc-ezWOiH fmCaML"
    data-element="table"
  >
    <thead
      className="sc-cCsOjp ffUHXz"
    >
      
      
      <tr>
        <td
          className="sc-ikZpkk sc-jIZahH kEHywv hohZkz"
        >
          <div
            className="sc-bZkfAO sc-kLLXSd ftgqdL bmhxgA"
          >
            Assets
          </div>
        </td>
        <td
          className="sc-ikZpkk sc-jIZahH jKbMnz hohZkz"
        >
          <div
            className="sc-bZkfAO sc-kLLXSd ftgqdL bmhxgA"
          >
            Total value deposited
          </div>
        </td>
        <td
          className="sc-ikZpkk sc-jIZahH jKbMnz hohZkz"
        >
          <div
            className="sc-bZkfAO sc-kLLXSd ftgqdL bmhxgA"
          >
            Total borrowed
          </div>
        </td>
        <td
          className="sc-ikZpkk sc-jIZahH jKbMnz hohZkz"
        >
          <div
            className="sc-bZkfAO sc-kLLXSd ftgqdL bmhxgA"
          >
            Deposit APY
          </div>
        </td>
        <td
          className="sc-ikZpkk sc-jIZahH jorjXY hohZkz"
        >
          <div
            className="sc-bZkfAO sc-kLLXSd ftgqdL bmhxgA"
          >
            Borrow APY
          </div>
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className="sc-ikZpkk kEHywv"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            ETH
          </div>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-ikZpkk jorjXY"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-ikZpkk kEHywv"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            DAI
          </div>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-ikZpkk jorjXY"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-ikZpkk kEHywv"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            POLKA
          </div>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-ikZpkk jorjXY"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-ikZpkk kEHywv"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            BTC
          </div>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-ikZpkk jKbMnz"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-ikZpkk jorjXY"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
    </tbody>
    <tfoot
      className="sc-bZnhIo cIKPed c-table__footer"
    >
      <td
        className="sc-ikZpkk jhNfxC"
        colSpan={5}
      >
        <div>
          Footer component
        </div>
      </td>
    </tfoot>
  </table>
</div>
`;
